Mon Jan 19 16:30:05 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b5 released.

	* process.c (rb_syswait): no exception raised.

Fri Jan 16 00:43:43 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.h (CLONESETUP): copies its singleton classes too.

	* class.c (singleton_class_attached): saves binded object in the
	  singleton classes.

	* eval.c (rb_eval): calls singleton_method_added even in the
	  singleton class clauses.

Fri Jan 15 23:22:43 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* ruby.c (proc_options): -S does not recognize PATH.

Thu Jan 15 02:03:12 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_clear_cache_by_id): clear only affected cache
	  entries.

Wed Jan 14 02:14:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/socket/socket.c: new UDP/IP socket classes.

Tue Jan 13 10:00:18 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_cmp): ignorecase($=) works wrong.

Fri Jan  9 13:19:55 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b4 released.

	* eval.c (f_missing): class name omitted from the error message.

	* error.c (exc_inspect): description changed.

	* string.c (Init_String): GlobalExit's superclass did not filled,
	  since GlobalExit created earlier than String.

Thu Jan  8 12:10:09 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (aryset): expr in the brackets can be null.

Wed Jan  7 21:13:56 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_reopen): keep stderr unclosed.

	* io.c (io_errset): keep stderr unclosed.

Tue Jan  6 00:27:43 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y: syntax modified for `while expr do .. end' etc.

	* process.c (f_exec,f_system): can supply arbitrary name for the
 	  new process.

Mon Jan  5 16:59:13 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* file.c (file_s_basename): removes any extention by ".*".

Sun Jan  4 19:36:22 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
